# NDK

app/: build.gradle
app/src/androidTest/java/com/wzq/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/wzq/ndk/: AA.kt  MainActivity.kt
app/src/test/java/com/wzq/ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
